@@ -351,6 +351,4 @@ Volunteers for these and other projects are welcome!
 
 329*Have a Display Editor shortcut from the data popup menu.
 
-331 Support setting all signals at once, using `handle all'.
-
 332 (Insert new project ideas here)
